tilføjet CDN til axios

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <script>
       const mountedApp = app.mount('#app')
     </script>
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
   </body>
 </html>
