--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
       <h1>{{ intro }}</h1>
       
+      <input v-model:"carVendor" placeholder="vendor">
+      <input v-model:"carModel" placeholder="model">
+      <input v-model:"carPrice" placeholder="price">
       
 
 
