tilføjet car id

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
       <div class="nav-bar"></div>
 
       <h1>{{ intro }}</h1>
-      
+      <input v-model:"carId" placeholder="Id">      
       <input v-model:"carVendor" placeholder="vendor">
       <input v-model:"carModel" placeholder="model">
       <input v-model:"carPrice" placeholder="price">
       
+      <button v-on:"gemBil">gem bil</button>
 
 
     </div>
