--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 
       <h1>{{ intro }}</h1>
       
+      <input v-model="carVendor" placeholder="Vendor">
+      <input v-model="carModel" placeholder="Model">
+      <input v-model="carPrice" placeholder="price">
+      
+      <div>
+        {{carVendor}}
+        {{carModel}}
+        {{carPrice}}
+      </div>
+
+
+
     </div>
 
     <!-- Import App -->
