click event på knap virker

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <input v-model="carModel" placeholder="Model">
       <input v-model="carPrice" placeholder="price">
       
+      <button v-on:click="gemBil" >Gem bil</button>
+
       <div>
         {{carVendor}}
         {{carModel}}
